#
#
#

[package]
name = "cipher"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
crossterm = { version="0.27.0", features=["event-stream"]}
futures = "0.3.30"
itertools = "0.12.1"
ratatui = "0.26.0"
tokio = { version="1.35.1", features=["full"]}

[profile.dev]
debug = true
incremental = true
opt-level = 0
lto = false

[profile.release]
debug = false
incremental = false
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.package.backtrace]
opt-level = 3
